--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -158,11 +158,19 @@
 	}
 
 	// Initiatives page: Workshop section
-	.workshop {
+	.one-workshop {
+		box-shadow: rem(0) rem(0) rem(7) currentColor;
+
+		&:hover {
+			box-shadow: 0 0 rem(35) currentColor;
+		}
+	}
+
+	.workshop-image {
 		a:focus,
 		a:hover {
 			img {
-				box-shadow: rem(-10) rem(10) rem(10) currentColor;
+				box-shadow: 0 0 0 rem(4) currentColor inset;
 			}
 		}
 	}
