--- a/src/scss/components/_initiatives.scss
+++ b/src/scss/components/_initiatives.scss
@@ -1,26 +1,76 @@
 // Initiatives page: Workshop section
-.workshop {
-	padding: 0;
+.workshops {
+	// Every workshop card
+	.one-workshop {
+		border-radius: rem(18);
+		box-shadow: rem(0) rem(0) rem(7) rgba(0, 0, 0, 0.25);
+		display: grid;
+		grid-template-rows: auto rem(227);
+		margin: rem(32) 0 rem(32) 0;
 
-	a:focus,
-	a:hover {
-		img {
-			box-shadow: rem(-10) rem(10) rem(10) rgba(0, 0, 0, 0.25);
+		&:hover {
+			box-shadow: 0 0 rem(35) rgba(0, 0, 0, 0.55);
+		}
+
+		// Workshop title and descriptions
+		.workshop-narrative {
+			border-radius: rem(18) rem(18) 0 0;
+			min-height: rem(350);
+			padding: 0 rem(16) rem(16) rem(16);
+
+			// Workshop titles
+			h2 {
+				border-bottom: rem(2) solid $grey-shade;
+				padding-bottom: rem(16);
+			}
+		}
+
+		// Workshop images
+		.workshop-image {
+			// In order to apply border-radius, all inner elements need to have the same border-radius applied.
+			// This includes the wrapper div.workshop-image and inner img element.
+
+			border-radius: 0 0 rem(18) rem(18);
+			height: 100%;
+
+			img {
+				border-radius: 0 0 rem(18) rem(18);
+				box-shadow: 0 0 0 rem(4) transparent inset;
+				height: 100%;
+				// Add initial padding to leave room for the inset box shadow to display at focus/hover
+				padding: rem(4);
+				width: 100%;
+			}
+
+			a:focus,
+			a:hover {
+				// Override the default background-color for a:hover
+				background-color: transparent;
+
+				img {
+					box-shadow: 0 0 0 rem(4) $navy-light inset;
+				}
+			}
 		}
 	}
 }
 
-.workshop-image {
-	max-width: 100%;
-}
-
 // Workshop page
-.workshop-page .description {
-	margin-bottom: rem(100);
+.workshop-page {
+	.workshop-cover-image {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 100%;
+	}
 
-	h3 {
-		border-bottom: rem(5) solid $gold;
-		line-height: rem(60);
+	.description {
+		margin-bottom: rem(100);
+
+		h3 {
+			border-bottom: rem(5) solid $gold;
+			line-height: rem(60);
+		}
 	}
 }
 
@@ -194,6 +244,30 @@
 }
 
 @include breakpoint-up(lg) {
+	// Initiatives page: Workshop section
+	.workshops {
+		.one-workshop {
+			grid-template-columns: 70% 30%;
+			grid-template-rows: 100%;
+
+			.workshop-narrative {
+				border-radius: rem(18) 0 0 rem(18);
+				min-height: rem(336);
+				padding: 0 rem(16) 0 rem(32);
+			}
+
+			// In order to apply border-radius, all inner elements need to have the same border-radius applied.
+			// This includes the wrapper div.workshop-image and inner img element.
+			.workshop-image {
+				border-radius: 0 rem(18) rem(18) 0;
+
+				img {
+					border-radius: 0 rem(18) rem(18) 0;
+				}
+			}
+		}
+	}
+
 	#comment-form button {
 		width: auto;
 	}
