--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -8,8 +8,10 @@
 		background-color: $white;
 		background-position: 50% 80%;
 		background-repeat: no-repeat;
+		border-radius: rem(10);
 		box-shadow: 0 rem(4) rem(4) rgba(0, 0, 0, 0.25);
-		height: rem(208);
+		height: rem(216);
+		text-align: center;
 
 		&:hover,
 		&:focus {
