feat: adjust the styling of the advisory panel page based on the design

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -286,7 +286,7 @@
 
 		// Advisory panel page
 		.advisory-panel > .api-content > .wp-block-group > .wp-block-group__inner-container > .wp-block-group > .wp-block-group__inner-container > .wp-block-group {
-			box-shadow: 0 rem(4) rem(4) currentColor;
+			box-shadow: rem(0) rem(0) rem(7) currentColor;
 		}
 	}
 
