feat: add "register here" button for workshops on the Initiatives page

--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -25,7 +25,7 @@
 	}
 }
 
-// Maintain aspect ratio of a container
+// The general css for tags
 @mixin tags() {
 	display: flex;
 	flex-wrap: wrap;
