--- a/src/_includes/components/workshop.njk
+++ b/src/_includes/components/workshop.njk
@@ -2,6 +2,9 @@
 	<div class="workshop-narrative">
 		<h2 class="h3"><a href="/initiatives/{{ workshop.id }}">{{ workshop.title | safe }}</a></h2>
 		<div class="description">{{ workshop.shortDescription | safe }}</div>
+		{% if workshop.registrationUrl %}
+		<a href={{ workshop.registrationUrl }} class="registration-button">Register here</a>
+		{% endif %}
 	</div>
 	<div class="workshop-image">
 		<a href="/initiatives/{{ workshop.id }}">
