--- a/src/scss/components/_initiatives.scss
+++ b/src/scss/components/_initiatives.scss
@@ -192,25 +192,25 @@
 		font-weight: $font-weight-medium;
 		margin-right: rem(20);
 	}
+}
 
-	button {
-		background-color: $white;
-		border: 0;
-		border-radius: rem(33);
-		box-shadow: 0 0 0 rem(2) $green-dark inset;
-		box-sizing: border-box;
-		color: $green-dark;
-		float: right;
-		font-size: rem(16);
-		font-weight: $font-weight-semibold;
-		height: rem(41);
-		line-height: rem(19);
-		margin: rem(29) 0;
-		padding: rem(8) rem(34);
-		transform: perspective(rem(1)) translateZ(0);
-	}
+// Button style shared by the "register here" button on the Intiatives page and the "post a comment" button on the Workshop page
+#comment-form button,
+.registration-button {
+	background-color: $white;
+	border: 0;
+	border-radius: rem(33);
+	box-shadow: 0 0 0 rem(2) $green-dark inset;
+	box-sizing: border-box;
+	color: $green-dark;
+	font-size: rem(16);
+	font-weight: $font-weight-semibold;
+	height: rem(41);
+	line-height: rem(24);
+	padding: rem(8) rem(34);
+	transform: perspective(rem(1)) translateZ(0);
 
-	button::before {
+	&::before {
 		border-radius: rem(26);
 		box-shadow: 0 0 0 rem(2) $green-dark inset;
 		content: '';
@@ -222,24 +222,40 @@
 		width: 100%;
 	}
 
-	button:hover::before,
-	button:focus::before,
-	button:active::before {
+	&:hover::before,
+	&:focus::before,
+	&:active::before {
 		left: rem(4);
 		top: rem(4);
 	}
 
-	button::-moz-focus-inner {
+	&::-moz-focus-inner {
 		outline: none;
 	}
 
-	button:focus {
+	&:focus {
 		outline: none;
 	}
 
-	button:-moz-focusring {
+	&:-moz-focusring {
 		color: transparent;
 		text-shadow: 0 0 0 $green-dark;
+	}
+}
+
+// Use higher specificity to define special style for two buttons to avoid css linting errors
+.workshop-page #comment-form button {
+	float: right;
+	margin: rem(29) 0;
+}
+
+.workshops .registration-button {
+	float: left;
+
+	&:focus,
+	&:hover,
+	&:active {
+		background-color: white;
 	}
 }
 
@@ -253,7 +269,7 @@
 			.workshop-narrative {
 				border-radius: rem(18) 0 0 rem(18);
 				min-height: rem(336);
-				padding: 0 rem(16) 0 rem(32);
+				padding: 0 rem(16) rem(16) rem(32);
 			}
 
 			// In order to apply border-radius, all inner elements need to have the same border-radius applied.
@@ -288,5 +304,9 @@
 		&::before {
 			height: rem(54);
 		}
+	}
+
+	.registration-button {
+		padding: rem(8) rem(16);
 	}
 }
