fix: update the tile link to participate in challenges

--- a/src/page.njk
+++ b/src/page.njk
@@ -27,7 +27,7 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 			<a href="/learn/" class="green card">
 				<h2>Find inclusive data tools</h2>
 			</a>
-			<a href="/inclusion-challenges/" class="yellow card">
+			<a href="/initiatives/" class="yellow card">
 				<h2>Participate in our inclusion challenge workshops</h2>
 			</a>
 			<a href="/badges/" class="azure card">
