fix: update one home tile label

--- a/src/page.njk
+++ b/src/page.njk
@@ -25,7 +25,7 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 				<h2>Read current views in inclusive data science</h2>
 			</a>
 			<a href="/learn/" class="green card">
-				<h2>Find inclusive data tools</h2>
+				<h2>Search the We Count Library</h2>
 			</a>
 			<a href="/initiatives/" class="yellow card">
 				<h2>Participate in our inclusion challenge workshops</h2>
