--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -6,6 +6,7 @@
 @import "cards";
 @import "filter";
 @import "initiatives";
+@import "map";
 @import "news-and-views";
 @import "pagination";
 @import "post-article";
