fix: set the min-height for the description block on the mobile view

--- a/src/scss/components/_initiatives.scss
+++ b/src/scss/components/_initiatives.scss
@@ -33,6 +33,7 @@
 		// Workshop title and descriptions
 		.workshop-narrative {
 			border-radius: rem(18) rem(18) rem(18) rem(18);
+			min-height: rem(208);
 			padding: 0 rem(16) rem(16) rem(16);
 
 			// Workshop titles
