--- a/src/views.njk
+++ b/src/views.njk
@@ -8,143 +8,173 @@ pagination:
 {% extends 'layouts/base.njk' %}
 
 {% block content %}
-  <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-    <symbol id="placeholder" viewBox="-4 -4 224 224">
-      {% include 'svg/placeholder.svg' %}
-    </symbol>
-    <symbol id="arrowup" viewBox="0 0 39 23">
-      {% include 'svg/arrowup.svg' %}
-    </symbol>
-    <symbol id="arrowdown" viewBox="0 0 39 24">
-  		{% include 'svg/arrowdown.svg' %}
-  	</symbol>
-  	<symbol id="apply" viewBox="0 0 26 26" fill="none">
-  		{% include 'svg/apply.svg' %}
-  	</symbol>
-  	<symbol id="reset" viewBox="0 0 26 26" fill="none">
-  		{% include 'svg/reset.svg' %}
-  	</symbol>
-  </svg>
+	<svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
+		<symbol id="placeholder" viewBox="-4 -4 224 224">
+			{% include 'svg/placeholder.svg' %}
+		</symbol>
+		<symbol id="arrowup" viewBox="0 0 39 23">
+			{% include 'svg/arrowup.svg' %}
+		</symbol>
+		<symbol id="arrowdown" viewBox="0 0 39 24">
+			{% include 'svg/arrowdown.svg' %}
+		</symbol>
+		<symbol id="apply" viewBox="0 0 26 26" fill="none">
+			{% include 'svg/apply.svg' %}
+		</symbol>
+		<symbol id="reset" viewBox="0 0 26 26" fill="none">
+			{% include 'svg/reset.svg' %}
+		</symbol>
+	</svg>
 
-  <article class="views static-view">
-    <h1>Views</h1>
+	<article class="views static-view">
+		<h1>Views</h1>
 
-    <form method="get" action="/views/">
-      {% set placeholderForSearch = "Search views..." %}
-      {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
-      {% include 'components/search-container.njk' %}
+		<form method="get" action="/views/">
+			{% set placeholderForSearch = "Search views..." %}
+			{% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
+			{% include 'components/search-container.njk' %}
 
-      {% set filterTitle = "Search Filters" %}
-      {% set filterAction = "/views/" %}
-      {% include 'components/filter.njk' %}
-    </form>
+			{% set filterTitle = "Search Filters" %}
+			{% set filterAction = "/views/" %}
+			{% include 'components/filter.njk' %}
+		</form>
 
-		<div class="news-grid">
+        <div class="api-content">
 			{% for item in pagination.items %}
-			<div class="api-content">
-			{% include 'components/grid-item.njk' %}
-			</div>
+                {% set tileURL = item.href %}
+				{% set title = item.title %}
+				{% set description = item.excerpt %}
+				{% set author = item.author %}
+				{% set dateTime = item.dateTime %}
+				{% set previewImageUrl = item.picture %}
+				{% set previewImageAltText = item.altTag %}
+				{% include "components/tile-item.njk" %}
 			{% endfor %}
 		</div>
 
-    {% if pagination.pages.length > 1 %}
-		  {% include 'components/pagination.njk' %}
-    {% endif %}
+		{% if pagination.pages.length > 1 %}
+			{% include 'components/pagination.njk' %}
+		{% endif %}
 	</article>
 
-  {# For displaying dynamic search and filtering results #}
+	{# For displaying dynamic search and filtering results #}
 	<article class="views dynamic-view">
-    <h1>Views</h1>
+		<h1>Views</h1>
 
-    <form method="get" action="/views/">
-      {# Search #}
-      <div class="search-container">
-      	<svg><use xlink:href="#search" /></svg>
-    		<input type="search" name="s" :value="searchTerm" placeholder="Search views..." aria-label="Enter keywords for a search in posts">
-      </div>
+		<form method="get" action="/views/">
+			{# Search #}
+			<div class="search-container">
+				<svg><use xlink:href="#search" /></svg>
+				<input type="search" name="s" :value="searchTerm" placeholder="Search views..." aria-label="Enter keywords for a search in posts">
+			</div>
 
-      {# Filter #}
-      <div class="filter">
-      	<div class="filter-header">
-      		<h2 class="h3">Search Filters</h2>
-      		<button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
-      			<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
-      			<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
-      		</button>
-      	</div>
+			{# Filter #}
+			<div class="filter">
+				<div class="filter-header">
+					<h2 class="h3">Search Filters</h2>
+					<button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
+						<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
+						<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
+					</button>
+				</div>
 
-      	<div class="filter-body">
-      		<ul class="filter-choices">
-      			<li v-for="tag in tags">
-      				<input class="filter-checkbox" type="checkbox" v-model="tag.checked" :id="tag.slug" :name="tag.slug">
-      				<label :for="tag.slug">{{ '{{ tag.name }}' }}</label>
-      			</li>
-      		</ul>
+				<div class="filter-body">
+					<ul class="filter-choices">
+						<li v-for="tag in tags">
+							<input class="filter-checkbox" type="checkbox" v-model="tag.checked" :id="tag.slug" :name="tag.slug">
+							<label :for="tag.slug">{{ '{{ tag.name }}' }}</label>
+						</li>
+					</ul>
 
-      		<div class="filter-buttons">
-      			<button class="apply-button" type="submit">
-      				<svg><use xlink:href="#apply" /></svg><span>Apply Filters</span>
-      			</button>
-      			<button class="reset-button" type="button">
-      				<svg><use xlink:href="#reset" /></svg><span>Reset Filters</span>
-      			</button>
-      		</div>
-      	</div>
-      </div>
-    </form>
+					<div class="filter-buttons">
+						<button class="apply-button" type="submit">
+							<svg><use xlink:href="#apply" /></svg><span>Apply Filters</span>
+						</button>
+						<button class="reset-button" type="button">
+							<svg><use xlink:href="#reset" /></svg><span>Reset Filters</span>
+						</button>
+					</div>
+				</div>
+			</div>
+		</form>
 
-    <p role="status" class="search-result" v-if="searchResult">{{ '{{ searchResult }}' }}</p>
+		<p role="status" class="search-result" v-if="searchResult">{{ '{{ searchResult }}' }}</p>
 
-    <div class="applied-tags" v-if="selectedTags.length > 0">
-      <p class="applied-tags-title">Applied Tags:</p>
-      <div class="tags">
-        <a v-for="tag in selectedTags" :href="'/tags/' + tag.slug + '/'">{{ '{{ tag.name }}' }}</a>
-      </div>
-    </div>
+		<div class="applied-tags" v-if="selectedTags.length > 0">
+			<p class="applied-tags-title">Applied Tags:</p>
+			<div class="tags">
+				<a v-for="tag in selectedTags" :href="'/tags/' + tag.slug + '/'">{{ '{{ tag.name }}' }}</a>
+			</div>
+		</div>
 
-    <div class="search-term-container" v-if="searchTerm">
-      <p class="search-term-title">Search Term:</p>
-      <p class="search-term">“{{ '{{ searchTerm }}' }}”</p>
-    </div>
+		<div class="search-term-container" v-if="searchTerm">
+			<p class="search-term-title">Search Term:</p>
+			<p class="search-term">“{{ '{{ searchTerm }}' }}”</p>
+		</div>
 
-		<div class="news-grid" v-if="resultsToDisplay.length > 0">
-		  <div v-for="item in resultsToDisplay" :key="item.id" class="api-content">
-			  {# TODO: The gride item layout below can go into a sharable vue template script
-			  when https://github.com/11ty/eleventy-plugin-vue is released #}
-        <article class="news-item">
+		<div class="api-content" v-if="resultsToDisplay.length > 0">
+            <a v-for="item in resultsToDisplay" :key="item.id" :href="item.href">
+            	<div class="tile-item">
+            		<div class="tile-narrative">
+            			<h2 class="h3">
+                            {{ '{{ item.title }}' }}
+                        </h2>
+
+                        <div v-if="item.category==='views'" class="author">
+							{{ '{{ item.author }}' }}
+						</div>
+
+						<div v-if="item.dateTime" class="date">
+							<time :datetime="item.dateTime" class="dt-published">{{ '{{ item.dateTime }}' }}</time>
+						</div>
+
+                        <div v-html="item.excerpt" class="description"></div>
+            		</div>
+            		<div class="tile-image">
+                        <svg v-if="item.picture===null" class="logo placeholder-img">
+                            <use xlink:href="#placeholder" />
+                        </svg>
+                        <img v-else :src="item.picture" :alt="item.altTag">
+            		</div>
+            	</div>
+            </a>
+        </div>
+
+			{# <div v-for="item in resultsToDisplay" :key="item.id" class="api-content">
+				<article class="news-item">
 					<div class="preview-media-wrapper">
-					  <figure class="content">
-						  <svg v-if="item.picture===null" class="logo placeholder-img">
-							  <use xlink:href="#placeholder" />
-						  </svg>
+						<figure class="content">
+							<svg v-if="item.picture===null" class="logo placeholder-img">
+								<use xlink:href="#placeholder" />
+							</svg>
 							<img v-else :src="item.picture" :alt="item.altTag">
-					  </figure>
+						</figure>
 					</div>
 
 					<div class="content-preview">
-					  <h2 class="h3">
-						  <a :href="item.href">
-							  {{ '{{ item.title }}' }}
-						  </a>
-					  </h2>
+						<h2 class="h3">
+							<a :href="item.href">
+								{{ '{{ item.title }}' }}
+							</a>
+						</h2>
 
-					  <div v-if="item.category==='views'" class="author">
-						  {{ '{{ item.author }}' }}
-					  </div>
+						<div v-if="item.category==='views'" class="author">
+							{{ '{{ item.author }}' }}
+						</div>
 
-					  <div v-if="item.dateTime" class="date">
-						  <time :datetime="item.dateTime" class="dt-published">{{ '{{ item.dateTime }}' }}</time>
-					  </div>
+						<div v-if="item.dateTime" class="date">
+							<time :datetime="item.dateTime" class="dt-published">{{ '{{ item.dateTime }}' }}</time>
+						</div>
 
-					  <div v-html="item.excerpt" class="preview-content" />
+						<div v-html="item.excerpt" class="preview-content" />
 					</div>
-			  </article>
-		  </div>
-	  </div>
+				</article>
+			</div>
+		</div> #}
 
-	  {# TODO: The pagination layout below can go into a sharable vue template script
-	  when https://github.com/11ty/eleventy-plugin-vue is released #}
-	  <nav v-if="pagination" class="pagination" aria-label="pagination">
+		{# TODO: The pagination layout below can go into a sharable vue template script
+		when https://github.com/11ty/eleventy-plugin-vue is released #}
+		<nav v-if="pagination" class="pagination" aria-label="pagination">
 			<ul class="pagination-list">
 				<li>
 					<a v-if="pagination.href.previous" :href="pagination.href.previous" class="pagination-previous">
@@ -203,5 +233,6 @@ pagination:
 {% block footerScripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
 <script src="/js/utils.js"></script>
+<script src="/js/content-header-observer.js"></script>
 <script src="/js/views-dynamic-handler.js"></script>
 {% endblock %}
