feat: allow editing news/views intro texts via WordPress

--- a/src/_includes/components/footer-nav.njk
+++ b/src/_includes/components/footer-nav.njk
@@ -1,6 +1,6 @@
 <nav aria-label="Footer" class="footer-nav" style="display: none;">
     <ul>
-        {%- for pageItem in collections.pages %}
+        {%- for pageItem in collections.publicPages %}
             {%- if pageItem.menu_order > 0 %}
                 <li><a {% if page.url === '/' + pageItem.slug + '/' %}aria-current="page" {% endif %}href="/{{ pageItem.slug }}/">{{ pageItem.title }}</a></li>
             {%- endif %}
