--- a/src/page.njk
+++ b/src/page.njk
@@ -1,6 +1,6 @@
 ---
 pagination:
-  data: collections.pages
+  data: collections.publicPages
   size: 1
   alias: pageItem
 permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
