--- a/src/searchIndex.njk
+++ b/src/searchIndex.njk
@@ -8,7 +8,7 @@ permalink: index.json
 {%- for item in collections.news %}
 	{{ item | dump | safe }},
 {%- endfor %}
-{%- for item in collections.pages %}
+{%- for item in collections.allPages %}
 	{{ item | dump | safe }}{% if not loop.last %},{% endif %}
 {%- endfor %}
 ]
