--- a/src/views.njk
+++ b/src/views.njk
@@ -70,9 +70,9 @@ pagination:
 			</div>
 
 			{# Filter #}
-			<div class="filter">
+			<fieldset class="filter">
 				<div class="filter-header">
-					<h2 class="h3">Search Filters</h2>
+					<h2 class="h3"><legend>Search Filters</legend></h2>
 					<button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
 						<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
 						<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
@@ -96,20 +96,20 @@ pagination:
 						</button>
 					</div>
 				</div>
-			</div>
+			</fieldset>
 		</form>
 
-		<p role="status" class="search-result" v-if="searchResult">{{ '{{ searchResult }}' }}</p>
+		<h3 role="status" class="search-result" v-if="searchResult">{{ '{{ searchResult }}' }}</h3>
 
 		<div class="applied-tags" v-if="selectedTags.length > 0">
-			<p class="applied-tags-title">Applied Tags:</p>
+			<h4 class="search-for-title">Applied Tags:</p>
 			<div class="tags">
 				<a v-for="tag in selectedTags" :href="'/tags/' + tag.slug + '/'">{{ '{{ tag.name }}' }}</a>
 			</div>
 		</div>
 
 		<div class="search-term-container" v-if="searchTerm">
-			<p class="search-term-title">Search Term:</p>
+			<h4 class="search-for-title">Search Term:</h4>
 			<p class="search-term">“{{ '{{ searchTerm }}' }}”</p>
 		</div>
 
