fix: reposition <legend> tag

--- a/src/views.njk
+++ b/src/views.njk
@@ -72,7 +72,7 @@ pagination:
 			{# Filter #}
 			<fieldset class="filter">
 				<div class="filter-header">
-					<h2 class="h3"><legend>Search Filters</legend></h2>
+					<legend><h2 class="h3">Search Filters</h2></legend>
 					<button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
 						<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
 						<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
