fix: restore the use of fieldset and legend back to using header and ul

--- a/src/_includes/components/filter.njk
+++ b/src/_includes/components/filter.njk
@@ -1,6 +1,6 @@
-<fieldset class="filter">
+<div class="filter">
 	<div class="filter-header">
-		<legend><h2 class="h3">{{ filterTitle }}</h2></legend>
+		<h2 class="h3">{{ filterTitle }}</h2>
 		<button type="button" class="filter-expand-button" aria-expanded="false" aria-label="expand">
 			<svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
 			<svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
@@ -29,4 +29,4 @@
 			</button>
 		</div>
 	</div>
-</fieldset>
+</div>
