--- a/src/page.njk
+++ b/src/page.njk
@@ -43,12 +43,12 @@ permalink: "/{{ '/' if pageItem.slug === 'home' else pageItem.slug	}}/"
 		{{ pageItem.content | safe }}
 		<div class="workshops">
 			{% for workshop in collections.workshops %}
-				{% set tileURL = "/initiatives/" + workshop.id %}
-				{% set title = workshop.title %}
-				{% set description = workshop.shortDescription %}
+				{% set tileURL = "/initiatives/" + workshop.data.id %}
+				{% set title = workshop.data.title %}
+				{% set description = workshop.data.shortDescription %}
 				{% set defaultPreviewImageUrl = "/images/workshop.png" %}
-				{% set previewImageUrl = workshop.previewImageUrl %}
-				{% set previewImageAltText = workshop.previewImageAltText %}
+				{% set previewImageUrl = workshop.data.previewImageUrl %}
+				{% set previewImageAltText = workshop.data.previewImageAltText %}
 				{% include "components/tile-item.njk" %}
 			{% endfor %}
 		</div>
