--- a/src/admin.njk
+++ b/src/admin.njk
@@ -11,9 +11,10 @@ permalink: '/admin/index.html'
 </head>
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
-  <script src="https://unpkg.com/netlify-cms@2.10.35/dist/netlify-cms.js"></script>
-  <script>
-    CMS.registerPreviewStyle('/scss/main.css')
-  </script>
+  <script src="https://unpkg.com/netlify-cms@2.10.103/dist/netlify-cms.js"></script>
+	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	<script src="/node_modules/nunjucks/browser/nunjucks-slim.js"></script>
+  <script src="templates.js"></script>
+  <script src="cms.js"></script>
 </body>
 </html>
