--- a/src/admin.njk
+++ b/src/admin.njk
@@ -12,7 +12,12 @@ permalink: '/admin/index.html'
 <body>
   <!-- Include the script that builds the page and powers Netlify CMS -->
   <script src="https://unpkg.com/netlify-cms@2.10.103/dist/netlify-cms.js"></script>
-	<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
+	{% if env.context === "dev" %}
+	<script src="https://unpkg.com/browse/react@16.14.0/umd/react.development.js"></script>
+	{% else %}
+	<script src="https://unpkg.com/browse/react@16.14.0/umd/react.production.min.js"></script>
+	{% endif %}
+	<script src="https://unpkg.com/prop-types@15.6/prop-types.js"></script>
 	<script src="/node_modules/nunjucks/browser/nunjucks-slim.js"></script>
   <script src="templates.js"></script>
   <script src="cms.js"></script>
