feat: add Netlify identity widget to homepage

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -33,6 +33,9 @@
 			{% include 'components/footer.njk' %}
 		</div>
 		{% block footerScripts %}{% endblock %}
+		{% if page.url === "/" %}
+		<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+		{% endif %}
 		<script src="/js/uio.js" defer></script>
 	</body>
 </html>
