--- a/src/scss/abstracts/_mixins.scss
+++ b/src/scss/abstracts/_mixins.scss
@@ -166,7 +166,7 @@
 		}
 	}
 
-	// Workshop Page
+	// Initiative Page
 	.disabled-element,
 	.submitted-comment {
 		opacity: 0.7;
@@ -227,7 +227,7 @@
 	.search-container input,
 	button:not(.filter-expand-button):focus,
 	button:not(.filter-expand-button):hover,
-	// The "post a comment" button on the Workshop page
+	// The "post a comment" button on the Initiative page
 	#comment-form button,
 	#comment-form button::before,
 	li .pagination-link,
