--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -5,6 +5,7 @@
 @import "brand";
 @import "cards";
 @import "filter";
+@import "identity";
 @import "initiatives";
 @import "news-and-views";
 @import "news-grid";
