feat: improve sass compilation process

--- a/src/scss/abstracts/_reset.scss
+++ b/src/scss/abstracts/_reset.scss
@@ -1,1 +1,3 @@
-@import '/node_modules/sanitize.css/sanitize.css';
+/* See https://sass-lang.com/documentation/at-rules/import#importing-css */
+
+@import '../../../node_modules/sanitize.css/sanitize';
