--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -38,12 +38,12 @@
     {% if page.url === "/" %}
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
     <script>
-    netlifyIdentity.on('login', user => {
-      if (user.app_metadata.roles.includes('admin')) {
-        const el = document.querySelector('[data-netlify-identity-button]');
-        const newEl = document.createElement('p');
+    netlifyIdentity.on("login", user => {
+      if (user.app_metadata.roles.includes("admin")) {
+        const el = document.querySelector("[data-netlify-identity-button]");
+        const newEl = document.createElement("p");
         newEl.className = "has-text-align-center";
-        newEl.innerHTML = '<a href="/admin/">Administration</a>';
+        newEl.innerHTML = "<a href='/admin/'>Administration</a>";
         el.parentNode.insertBefore(newEl, el);
       }
     });
