--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -37,6 +37,17 @@
     {% block footerScripts %}{% endblock %}
     {% if page.url === "/" %}
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+    netlifyIdentity.on("login", user => {
+      if (user.app_metadata.roles.includes("admin")) {
+        const el = document.querySelector("[data-netlify-identity-button]");
+        const newEl = document.createElement("p");
+        newEl.className = "has-text-align-center";
+        newEl.innerHTML = "<a href='/admin/'>Administration</a>";
+        el.parentNode.insertBefore(newEl, el);
+      }
+    });
+    </script>
     {% endif %}
     <script src="/js/uio.js" defer></script>
   </body>
