feat: add YouTube embed support, update previews to handle YouTube embeds
chore: migrate PDFs into uploads library

--- a/src/_includes/components/nav-menu.njk
+++ b/src/_includes/components/nav-menu.njk
@@ -1,5 +1,5 @@
 <nav class="primary-nav" aria-label="Primary Navigation">
-  {% set navItems = collections.publicPages | eleventyNavigation %}
+  {% set navItems = collections.pages | eleventyNavigation %}
   {%- for item in navItems %}
     {%- if item.order > 0 %}
     <a {% if page.url === item.url %}aria-current="page" {% endif %}href="{{ item.url }}">{{ item.key }}</a>
