feat: add expander shortcode, editor and preview

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -72,7 +72,7 @@ document.querySelectorAll("main article.page h1, main article.page h2, header").
 </script>
 
 {% if page.url === "/advisory-panel/" %}
-  <script src="/js/advisory-panel-handler.js"></script>
+  <script src="/js/expander.js"></script>
 {% endif %}
 {% if page.url === "/team/" %}
   <script src="/js/team-handler.js"></script>
