--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -1,9 +1,9 @@
 // Component-specific styles.
-@import "advisory-panel";
 @import "aside";
 @import "badges";
 @import "brand";
 @import "cards";
+@import "expander";
 @import "filter";
 @import "identity";
 @import "initiatives";
