--- a/src/_includes/layouts/news.njk
+++ b/src/_includes/layouts/news.njk
@@ -9,8 +9,8 @@ pagination:
 
 {% block content %}
 <article class="news">
-    <h1>{{ intro.title }}</h1>
-    {{ intro.content | safe }}
+    <h1>{{ title }}</h1>
+        {{ content | safe }}
     <div class="news-grid">
       {% for item in pagination.items %}
       <div class="api-content">
