--- a/src/_includes/layouts/views.njk
+++ b/src/_includes/layouts/views.njk
@@ -27,8 +27,8 @@ pagination:
   </svg>
 
   <article class="views static-view">
-    <h1>{{ intro.title }}</h1>
-        {{ intro.content | safe }}
+    <h1>{{ title }}</h1>
+        {{ content | safe }}
     <form method="get" action="/views/">
       {% set placeholderForSearch = "Search views..." %}
       {% set ariaLabelForSearch = "Enter keywords for a search in posts" %}
@@ -41,13 +41,13 @@ pagination:
 
         <div class="api-content">
       {% for item in pagination.items %}
-                {% set tileURL = item.href %}
-        {% set title = item.title %}
-        {% set description = item.excerpt %}
-        {% set author = item.author %}
-        {% set dateTime = item.dateTime %}
-        {% set previewImageUrl = item.picture %}
-        {% set previewImageAltText = item.altTag %}
+        {% set tileURL = item.url %}
+        {% set title = item.data.title %}
+        {% set description = item.data.excerpt %}
+        {% set author = item.data.author %}
+        {% set dateTime = item.data.date %}
+        {% set previewImageUrl = item.data.picture %}
+        {% set previewImageAltText = item.data.altTag %}
         {% include "components/tile-item.njk" %}
       {% endfor %}
     </div>
@@ -59,8 +59,8 @@ pagination:
 
   {# For displaying dynamic search and filtering results #}
   <article class="views dynamic-view">
-        <h1>{{ intro.title }}</h1>
-        {{ intro.content | safe }}
+        <h1>{{ title }}</h1>
+        {{ content | safe }}
 
     <form method="get" action="/views/">
       {# Search #}
