--- a/src/searchIndex.njk
+++ b/src/searchIndex.njk
@@ -2,13 +2,13 @@
 permalink: index.json
 ---
 [
-{%- for item in collections.views %}
+{# {%- for item in collections.views %}
   {{ item | dump | safe }},
 {%- endfor %}
 {%- for item in collections.news %}
   {{ item | dump | safe }},
 {%- endfor %}
-{%- for item in collections.allPages %}
+{%- for item in collections.pages %}
   {{ item | dump | safe }}{% if not loop.last %},{% endif %}
-{%- endfor %}
+{%- endfor %} #}
 ]
