--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,9 +42,16 @@
       if (user.app_metadata.roles.includes("admin")) {
         const el = document.querySelector("[data-netlify-identity-button]");
         const newEl = document.createElement("p");
+        newEl.id = "administration";
         newEl.className = "has-text-align-center";
         newEl.innerHTML = "<a href='/admin/'>Administration</a>";
         el.parentNode.insertBefore(newEl, el);
+      }
+    });
+    netlifyIdentity.on("logout", () => {
+      const el = document.querySelector("#administration");
+      if (el) {
+        el.remove();
       }
     });
     </script>
