chore: clean up and restore tag filtering and search functionality

--- a/src/_includes/layouts/views.njk
+++ b/src/_includes/layouts/views.njk
@@ -114,7 +114,7 @@ pagination:
     </div>
 
     <div class="api-content" v-if="resultsToDisplay.length > 0">
-            <a v-for="item in resultsToDisplay" :key="item.id" :href="item.href">
+            <a v-for="item in resultsToDisplay" :key="item.id" :href="item.url">
               <div class="tile-item">
                 <div class="tile-narrative">
                   <h2 class="h3">
