--- a/src/collections/views.njk
+++ b/src/collections/views.njk
@@ -12,9 +12,9 @@ author: {{ viewsItem.author }}
 {%- if viewsItem.picture %}
 picture: {{ viewsItem.picture }}
 {%- endif %}
-{%- if viewsItem.altText %}
-altText: |-
-  {{ viewsItem.altText }}
+{%- if viewsItem.altTag %}
+altTag: |-
+  {{ viewsItem.altTag }}
 {%- endif %}
 {%- if viewsItem.excerpt %}
 excerpt: |-
