--- a/src/search.njk
+++ b/src/search.njk
@@ -36,7 +36,7 @@ permalink: /search/
 
           <div class="content-preview">
             <h2 class="h3">
-              <a :href="item.href">
+              <a :href="item.url">
                 {{ '{{ item.title }}' }}
               </a>
             </h2>
