--- a/src/_includes/layouts/view.njk
+++ b/src/_includes/layouts/view.njk
@@ -6,6 +6,7 @@
 
 {% set pageTitle = title %}
 {% set pageExcerpt = excerpt %}
+{% set pagination = collections.views | paginate(page) %}
 
 {% block content %}
 <article class="post-article">
@@ -13,16 +14,19 @@
   <div class="author">By {{ author }}</div>
   <time class="date" datetime="{{ date | w3DateFilter }}" class="dt-published">{{ date | dateFilter }}</time>
   <div class="api-content">{{ content | safe }}</div>
+
+
   {% if tags.length > 0 %}
   <section class="tags-info">
     <h2 class="h3">Tags</h2>
     <div class="tags">
     {% for tag in tags %}
-    <a href="/tags/{{ tag.slug }}/">{{ tag.name | safe }}</a>
+    <a href="/tags/{{ tag | slug }}/">{{ tag | safe }}</a>
     {% endfor %}
     </div>
   </section>
   {% endif %}
+
   {% if pagination.pages.length > 1 %}
   {% include 'components/pagination.njk' %}
   {% endif %}
