--- a/src/tags.njk
+++ b/src/tags.njk
@@ -1,9 +1,9 @@
 ---
 pagination:
-  data: collections.tags
+  data: collections.tagsList
   size: 1
   alias: oneTagPage
-permalink: "tags/{{ oneTagPage.slug }}/{% if oneTagPage.pageNumber %}page/{{ oneTagPage.pageNumber }}/{% endif %}"
+permalink: "tags/{{ oneTagPage | slug }}/{% if oneTagPage.pageNumber %}page/{{ oneTagPage.pageNumber }}/{% endif %}"
 ---
 {% extends 'layouts/base.njk' %}
 
