feat: configure CMS for news and views, restore tag archives

--- a/src/_includes/layouts/news.njk
+++ b/src/_includes/layouts/news.njk
@@ -5,7 +5,11 @@ pagination:
   data: collections.news
   size: 10
 ---
+{% if previewMode %}
+{% extends 'layouts/preview.njk' %}
+{% else %}
 {% extends 'layouts/base.njk' %}
+{% endif %}
 
 {% block content %}
 <article class="news">
