--- a/src/_includes/components/grid-item.njk
+++ b/src/_includes/components/grid-item.njk
@@ -1,9 +1,9 @@
 <article class="news-item">
-  {% if item.category === 'views' %}
+  {% if item.data.category === 'views' %}
   <div class="preview-media-wrapper">
     <figure class="content">
       {% if item.data.picture %}
-      <img src="{{ item.picture | safe }}" alt="{{ item.data.altTag }}">
+      <img src="{{ item.data.picture | safe }}" alt="{{ item.data.altTag }}">
       {% else %}
       <svg class="logo placeholder-img">
         <use xlink:href="#placeholder" />
@@ -12,12 +12,11 @@
     </figure>
   </div>
   {% endif %}
-
   <div class="content-preview">
     <h2 class="h3">
       <a href="{{ item.url if item.url else item.data.link }}">{{ item.data.title | safe }}</a>
     </h2>
-    {% if item.category === 'views' %}
+    {% if item.data.category === 'views' %}
     <div class="author">{{ item.data.author | safe }}</div>
     {% endif %}
     <div class="date">
