--- a/src/admin/admin.njk
+++ b/src/admin/admin.njk
@@ -18,8 +18,7 @@ permalink: '/admin/index.html'
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.14.0/umd/react.production.min.js" integrity="sha512-2YCEuA9o4l9bZd4vpYo2iGMrg3fJ/2SHrPPnYwpXiIegB7i0eAroKyhlR20jxPXhlFXPYPzIyc0e2pTWv2eSpA==" crossorigin="anonymous"></script>
     {% endif %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prop-types/15.6.0/prop-types.min.js" integrity="sha512-iaZEn6GbaeyZUTxmuWpJzdTzOurbAb/sPnWAxWcPhkVOffSkF9jyOPqcNsr1yhGI+zIF9Lm4xdr/MsGFl3tObQ==" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/nunjucks/3.0.1/nunjucks-slim.min.js" integrity="sha512-Le2QHLCeUlEbm3gHNGx122kY+m/XSgcZOIQdRyA/xcMLaHXLDB+5MCzL3aAxgT/dkMkwaBeiNbigjjssl7mYHw==" crossorigin="anonymous"></script>
-    <script src="templates.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/nunjucks@3.2.3/browser/nunjucks-slim.min.js" integrity="sha256-sF3DVE/zfImpeam2xPb1Qg8qfXksKN0UukMg0uriPaE=" crossorigin="anonymous"></script>    <script src="templates.js"></script>
     <script src="cms.js"></script>
   </body>
 </html>
