fix: include Initiatives data in the cross-site search

--- a/src/searchIndex.njk
+++ b/src/searchIndex.njk
@@ -32,6 +32,15 @@ permalink: index.json
     "date": {{ item.data.date | dump | safe }}
   },
 {%- endfor %}
+{%- for item in collections.initiatives %}
+  {
+    "title": {{ item.data.title | dump | safe }},
+    "category": "initiative",
+    "url": {{ item.url | dump | safe }},
+    "content": {{ item.templateContent | dump | safe }},
+    "excerpt": {{ item.data.shortDescription | dump | safe }}
+  },
+{%- endfor %}
 {%- for item in collections.pages %}
   {
     "title": {{ item.data.title | dump | safe }},
